commiting quize service

--- a/questioinService/src/main/resources/application.properties
+++ b/questioinService/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=questioinService
+
+server.port=8082
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/quize
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true  
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
