--- a/QuizService/src/main/resources/application.properties
+++ b/QuizService/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=QuizService
 
 
-server.port= 8081
+server.port=8081
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/quize
 spring.datasource.username=postgres
-spring.datasource.password=roots 
+spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true   
+spring.jpa.show-sql=true  
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+ 
 
