--- a/serviceRegistry/src/main/resources/application.properties
+++ b/serviceRegistry/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=serviceRegistry
+
+server.port= 8761
+
+#disable as client
+
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
+
