--- a/QuizService/src/main/resources/application.properties
+++ b/QuizService/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.application.name=QuizService
 
 
 server.port=8081
+spring.application.name=QUIZ-SERVICE
+
+
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/quize
 spring.datasource.username=postgres
@@ -12,3 +14,6 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
  
 
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
