--- a/questioinService/src/main/resources/application.properties
+++ b/questioinService/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.application.name=questioinService
 
-server.port=8083
+
+server.port=8082
+
+spring.application.name=QUESTION-SERVICE
+
+
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/quize
 spring.datasource.username=postgres
@@ -10,3 +14,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true  
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
